--- a/hort_parts/templates/hort_parts/product/main.html
+++ b/hort_parts/templates/hort_parts/product/main.html
@@ -22,25 +22,28 @@
 </head>
 
 <body class="template-collection belle">
+<div class="pageWrapper">
 
-{% include 'hort_parts/product/header.html' %}
+    {% include 'hort_parts/product/header.html' %}
 
-{% block product_page %}
-{% endblock product_page %}
+    {% block product_page %}
+    {% endblock product_page %}
 
-{% include 'hort_parts/product/footer.html' %}
+    {% include 'hort_parts/product/footer.html' %}
 
-<script src="{% static 'js/vendor/jquery-3.3.1.min.js' %}"></script>
-<script src="{% static 'js/vendor/jquery.cookie.js' %}"></script>
-<script src="{% static 'js/vendor/photoswipe.min.js' %}"></script>
-<script src="{% static 'js/vendor/photoswipe-ui-default.min.js' %}"></script>
-<script src="{% static 'js/vendor/modernizr-3.6.0.min.js' %}"></script>
-<script src="{% static 'js/vendor/wow.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/plugins.js' %}"></script>
-<script src="{% static 'js/popper.min.js' %}"></script>
-<script src="{% static 'js/lazysizes.js' %}"></script>
-<script src="{% static 'js/main_2.js' %}"></script>
+    <script src="{% static 'js/vendor/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/vendor/jquery.cookie.js' %}"></script>
+    <script src="{% static 'js/vendor/photoswipe.min.js' %}"></script>
+    <script src="{% static 'js/vendor/photoswipe-ui-default.min.js' %}"></script>
+    <script src="{% static 'js/vendor/modernizr-3.6.0.min.js' %}"></script>
+    <script src="{% static 'js/vendor/wow.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/plugins.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/lazysizes.js' %}"></script>
+    <script src="{% static 'js/main_2.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 
+</div>
 </body>
 </html>
