--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -6,97 +6,93 @@
 
 {% block product_page %}
 
-<div class="pageWrapper">
-
-    <!--Body Content-->
-    <div id="page-content">
-        <!--Collection Banner-->
-        <div class="collection-header">
-            <div class="collection-hero">
-                <div class="collection-hero__image">
-                    <img data-src="{{ category.image.url }}" src="{{ category.image.url }}"/>
-                </div>
-                <div class="collection-hero__title-wrapper">
-                    <h1 class="collection-hero__title page-width">{{ category.name }}</h1></div>
+<!--Body Content-->
+<div id="page-content">
+    <!--Collection Banner-->
+    <div class="collection-header">
+        <div class="collection-hero">
+            <div class="collection-hero__image">
+                <img data-src="{{ category.image.url }}" src="{{ category.image.url }}"/>
             </div>
+            <div class="collection-hero__title-wrapper">
+                <h1 class="collection-hero__title page-width">{{ category.name }}</h1></div>
         </div>
-        <!--End Collection Banner-->
-
-        <div class="container">
-            <div class="row">
-                <!--Sidebar-->
-                <div class="col-12 col-sm-12 col-md-3 col-lg-3 sidebar filterbar">
-                    <div class="closeFilter d-block d-md-none d-lg-none"><i class="icon icon anm anm-times-l"></i></div>
-                    <div class="sidebar_tags">
-                        <!--Categories-->
-                        <div class="sidebar_widget categories filter-widget">
-                            <div class="widget-title"><h2>{% trans 'Categories' %}</h2></div>
-                            <div class="widget-content">
-                                <ul class="sidebar_categories">
-                                    {% for c in categories %}
-                                    <li class="lvl-1">
-                                        <a href="{{ c.get_absolute_url }}" class="site-nav">
-                                            {{ c.name }}</a>
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </div>
-                        <!--Categories-->
-                    </div>
-                </div>
-                <!--End Sidebar-->
-                <!--Main Content-->
-                <div class="col-12 col-sm-12 col-md-9 col-lg-9 main-col">
-                    <div class="category-description">
-                        <h3>{% trans 'Category Description' %}</h3>
-                        <p>
-                            {{ category.info|safe }}
-                        </p>
-                    </div>
-                    <hr>
-                    <div class="productList">
-                        <div class="list-view-items grid--view-items">
-                            <!--ListView Item-->
-                            {% for p in products %}
-                            <div class="list-product list-view-item">
-                                <div class="list-view-item__image-column">
-                                    <div class="list-view-item__image-wrapper">
-                                        <!-- Image -->
-                                        <a href="{{ p.get_absolute_url }}"><img
-                                                class="list-view-item__image blur-up lazyload"
-                                                data-src="assets/images/product-images/product-image1.jpg"
-                                                src="assets/images/product-images/product-image1.jpg"></a>
-                                        <!-- End Image -->
-                                    </div>
-                                </div>
-                                <div class="list-view-item__title-column">
-                                    <div class="h2 grid-view-item__title">
-                                        <a href="{{ p.get_absolute_url }}">{{ p.name }}</a></div>
-                                    <!-- Sort Description -->
-                                    <p><a href="{{ p.get_absolute_url }}">{% trans 'Article' %}: {{ p.article }}</a></p>
-                                    <p><a href="{{ p.get_absolute_url }}">
-                                        {% trans 'Specification' %}: {{ p.specification }}</a></p>
-                                    <!-- End Sort Description -->
-                                    <form class="variants" action="#">
-                                        <a href="{{ p.get_absolute_url }}">
-                                            <button class="btn btn--small" type="button">{% trans 'In detail' %}
-                                            </button>
-                                        </a>
-                                    </form>
-                                </div>
-                            </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-                <!--End Main Content-->
-            </div>
-        </div>
-
     </div>
-    <!--End Body Content-->
+    <!--End Collection Banner-->
+
+    <div class="container">
+        <div class="row">
+            <!--Sidebar-->
+            <div class="col-12 col-sm-12 col-md-3 col-lg-3 sidebar filterbar">
+                <div class="closeFilter d-block d-md-none d-lg-none"><i class="icon icon anm anm-times-l"></i></div>
+                <div class="sidebar_tags">
+                    <!--Categories-->
+                    <div class="sidebar_widget categories filter-widget">
+                        <div class="widget-title"><h2>{% trans 'Categories' %}</h2></div>
+                        <div class="widget-content">
+                            <ul class="sidebar_categories">
+                                {% for c in categories %}
+                                <li class="lvl-1">
+                                    <a href="{{ c.get_absolute_url }}" class="site-nav">
+                                        {{ c.name }}</a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                    <!--Categories-->
+                </div>
+            </div>
+            <!--End Sidebar-->
+            <!--Main Content-->
+            <div class="col-12 col-sm-12 col-md-9 col-lg-9 main-col">
+                <div class="category-description">
+                    <h3>{% trans 'Category Description' %}</h3>
+                    <p>
+                        {{ category.info|safe }}
+                    </p>
+                </div>
+                <hr>
+                <div class="productList">
+                    <div class="list-view-items grid--view-items">
+                        <!--ListView Item-->
+                        {% for p in products %}
+                        <div class="list-product list-view-item">
+                            <div class="list-view-item__image-column">
+                                <div class="list-view-item__image-wrapper">
+                                    <!-- Image -->
+                                    <a href="{{ p.get_absolute_url }}">
+                                        <img class="list-view-item__image blur-up lazyload"
+                                             data-src="assets/images/product-images/product-image1.jpg"
+                                             src="assets/images/product-images/product-image1.jpg"></a>
+                                    <!-- End Image -->
+                                </div>
+                            </div>
+                            <div class="list-view-item__title-column">
+                                <div class="h2 grid-view-item__title">
+                                    <a href="{{ p.get_absolute_url }}">{{ p.name }}</a></div>
+                                <!-- Sort Description -->
+                                <p><a href="{{ p.get_absolute_url }}">{% trans 'Article' %}: {{ p.article }}</a></p>
+                                <p><a href="{{ p.get_absolute_url }}">
+                                    {% trans 'Specification' %}: {{ p.specification }}</a></p>
+                                <!-- End Sort Description -->
+                                <form class="variants" action="#">
+                                    <a href="{{ p.get_absolute_url }}">
+                                        <button class="btn btn--small" type="button">{% trans 'In detail' %}
+                                        </button>
+                                    </a>
+                                </form>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <!--End Main Content-->
+        </div>
+    </div>
 
 </div>
+<!--End Body Content-->
 
 {% endblock product_page %}
