--- a/hort_parts/templates/hort_parts/product/product_detail.html
+++ b/hort_parts/templates/hort_parts/product/product_detail.html
@@ -28,6 +28,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                         <div class="product-details-img">
+
                             <div class="product-thumb">
                                 <div id="gallery" class="product-dec-slider-2 product-tab-left">
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
@@ -35,7 +36,8 @@
                                        class="slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible0.jpg" alt=""/>
+                                             src="assets/images/product-detail-page/camelia-reversible0.jpg"
+                                             alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big2.jpg"
                                        data-zoom-image="assets/images/product-detail-page/camelia-reversible-big2.jpg"
@@ -50,7 +52,8 @@
                                 <div class="zoompro-span">
                                     <img class="blur-up lazyload zoompro"
                                          data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
-                                         alt="" src="assets/images/product-detail-page/camelia-reversible-big1.jpg"/>
+                                         alt=""
+                                         src="assets/images/product-detail-page/camelia-reversible-big1.jpg"/>
                                 </div>
                                 <div class="product-buttons">
                                     <a href="https://www.youtube.com/watch?v=93A2jOW5Mog" class="btn popup-video"
@@ -82,9 +85,8 @@
                                 <li>{% trans 'Specification' %}: {{ product.specification }}</li>
                             </ul>
                         </div>
-
-
                     </div>
+
                 </div>
             </div>
             <!--End-product-single-->
@@ -99,7 +101,8 @@
                 <div class="tab-container">
                     <div id="tab1" class="tab-content">
                         <div class="product-description rte">
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                Ipsum
                                 has been the industry's standard dummy text ever since the 1500s, when an unknown
                                 printer took a galley of type and scrambled it to make a type specimen book. It has
                                 survived not only five centuries, but also the leap into electronic typesetting,
@@ -140,7 +143,8 @@
                                                            for="review_author_10508262282">Name</label>
                                                     <input class="spr-form-input spr-form-input-text "
                                                            id="review_author_10508262282" type="text"
-                                                           name="review[author]" value="" placeholder="Enter your name">
+                                                           name="review[author]" value=""
+                                                           placeholder="Enter your name">
                                                 </div>
                                                 <div class="spr-form-contact-email">
                                                     <label class="spr-form-label"
@@ -155,7 +159,8 @@
                                                 <div class="spr-form-review-rating">
                                                     <label class="spr-form-label">Rating</label>
                                                     <div class="spr-form-input spr-starrating">
-                                                        <div class="product-review"><a class="reviewLink" href="#"><i
+                                                        <div class="product-review"><a class="reviewLink"
+                                                                                       href="#"><i
                                                                 class="fa fa-star-o"></i><i
                                                                 class="font-13 fa fa-star-o"></i><i
                                                                 class="font-13 fa fa-star-o"></i><i
@@ -174,8 +179,10 @@
                                                 </div>
 
                                                 <div class="spr-form-review-body">
-                                                    <label class="spr-form-label" for="review_body_10508262282">Body of
-                                                        Review <span class="spr-form-review-body-charactersremaining">(1500)</span></label>
+                                                    <label class="spr-form-label" for="review_body_10508262282">Body
+                                                        of
+                                                        Review <span
+                                                                class="spr-form-review-body-charactersremaining">(1500)</span></label>
                                                     <div class="spr-form-input">
                                                         <textarea class="spr-form-input spr-form-input-textarea "
                                                                   id="review_body_10508262282"
@@ -209,47 +216,6 @@
 </div>
 <!--End Body Content-->
 
-<script>
-    $(function () {
-        var $pswp = $('.pswp')[0],
-            image = [],
-            getItems = function () {
-                var items = [];
-                $('.lightboximages a').each(function () {
-                    var $href = $(this).attr('href'),
-                        $size = $(this).data('size').split('x'),
-                        item = {
-                            src: $href,
-                            w: $size[0],
-                            h: $size[1]
-                        }
-                    items.push(item);
-                });
-                return items;
-            }
-        var items = getItems();
-
-        $.each(items, function (index, value) {
-            image[index] = new Image();
-            image[index].src = value['src'];
-        });
-        $('.prlightbox').on('click', function (event) {
-            event.preventDefault();
-
-            var $index = $(".active-thumb").parent().attr('data-slick-index');
-            $index++;
-            $index = $index - 1;
-
-            var options = {
-                index: $index,
-                bgOpacity: 0.9,
-                showHideOpacity: true
-            }
-            var lightBox = new PhotoSwipe($pswp, PhotoSwipeUI_Default, items, options);
-            lightBox.init();
-        });
-    });
-</script>
 
 <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="pswp__bg"></div>
