--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -63,8 +63,8 @@
                                     <!-- Image -->
                                     <a href="{{ p.get_absolute_url }}">
                                         <img class="list-view-item__image blur-up lazyload"
-                                             data-src="assets/images/product-images/product-image1.jpg"
-                                             src="assets/images/product-images/product-image1.jpg"></a>
+                                             data-src="{% static 'img/image_not_found.jpg' %}"
+                                             src="{% static 'img/image_not_found.jpg' %}"></a>
                                     <!-- End Image -->
                                 </div>
                             </div>
