--- a/hort_parts/templates/hort_parts/product/product_detail.html
+++ b/hort_parts/templates/hort_parts/product/product_detail.html
@@ -31,45 +31,27 @@
 
                             <div class="product-thumb">
                                 <div id="gallery" class="product-dec-slider-2 product-tab-left">
-                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
-                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                    <a data-image="{% static 'img/image_not_found.jpg' %}"
+                                       data-zoom-image="{% static 'img/image_not_found.jpg' %}"
                                        class="slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible0.jpg"
-                                             alt=""/>
+                                             src="{% static 'img/image_not_found.jpg' %}" />
                                     </a>
-                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big2.jpg"
-                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big2.jpg"
+                                    <a data-image="{% static 'img/image_not_found.jpg' %}"
+                                       data-zoom-image="{% static 'img/image_not_found.jpg' %}"
                                        class="slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible.jpg" alt=""/>
+                                             src="{% static 'img/image_not_found.jpg' %}" />
                                     </a>
                                 </div>
                             </div>
-                            <div class="zoompro-wrap product-zoom-right pl-20">
-                                <div class="zoompro-span">
-                                    <img class="blur-up lazyload zoompro"
-                                         data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
-                                         alt=""
-                                         src="assets/images/product-detail-page/camelia-reversible-big1.jpg"/>
-                                </div>
-                                <div class="product-buttons">
-                                    <a href="https://www.youtube.com/watch?v=93A2jOW5Mog" class="btn popup-video"
-                                       title="View Video"><i class="icon anm anm-play-r" aria-hidden="true"></i></a>
-                                    <a href="#" class="btn prlightbox" title="Zoom"><i
-                                            class="icon anm anm-expand-l-arrows" aria-hidden="true"></i></a>
-                                </div>
-                            </div>
+
                             <div class="lightboximages">
-                                <a href="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                <a href="{% static 'img/image_not_found.jpg' %}"
                                    data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big2.jpg"
-                                   data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big3.jpg"
-                                   data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible7-big.jpg"
+                                <a href="{% static 'img/image_not_found.jpg' %}"
                                    data-size="1462x2048"></a>
                             </div>
 
