--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -471,8 +471,7 @@
 
         <div class="row narrow section-intro with-bottom-sep animate-this">
             <div class="col-twelve">
-                <h3>Download Materials</h3>
-
+                <h3>{% trans 'Download Materials' %}</h3>
 
             </div>
         </div>
@@ -481,64 +480,15 @@
 
 </section>
 
-<!--<section id="news">-->
-
-<!--    <div class="row">-->
-<!--        <div class="col-twelve">-->
-<!--            <h2 class="animate-this">News</h2>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--    <div class="row flex-container">-->
-
-<!--        <div id="testimonial-slider" class="flex-slider animate-this">-->
-
-<!--            <ul class="slides">-->
-
-<!--                <li>-->
-<!--                    <p>-->
-<!--                        Your work is going to fill a large part of your life, and the only way to be truly satisfied is-->
-<!--                        to do what you believe is great work. And the only way to do great work is to love what you do.-->
-<!--                        If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart,-->
-<!--                        you'll know when you find it.-->
-<!--                    </p>-->
-
-<!--                    <div class="testimonial-author">-->
-<!--                        <img src="{% static 'images/news/ha30356_m.jpg' %}">-->
-<!--                    </div>-->
-
-<!--                </li>-->
-
-<!--                <li>-->
-<!--                    <p>-->
-<!--                        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.-->
-<!--                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem-->
-<!--                        nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.-->
-<!--                    </p>-->
-
-<!--                    <div class="testimonial-author">-->
-<!--                        <img src="{% static 'images/news/ha30356_m.jpg' %}">-->
-<!--                    </div>-->
-
-<!--                </li> &lt;!&ndash; end slide &ndash;&gt;-->
-
-<!--            </ul>-->
-
-<!--        </div>-->
-
-<!--    </div>-->
-
-<!--</section>-->
-
 <section id="contact">
 
     <div class="overlay"></div>
 
     <div class="row narrow section-intro with-bottom-sep animate-this">
         <div class="col-twelve">
-            <h3>Contact</h3>
-            <p class="lead">If you have any business queries or other questions, please fill out the following form to
-                contact us. Thank you.</p>
+            <h3>{% trans 'Contact' %}</h3>
+            <p class="lead">{% trans 'If you have any business queries or other questions, please fill out the following form to
+                contact us. Thank you.' %}</p>
         </div>
     </div>
 
@@ -546,39 +496,41 @@
 
         <div class="col-seven tab-full animate-this">
 
-            <h5>Send Us A Message</h5>
+            <h5>{% trans 'Send Us A Message' %}</h5>
 
             <form name="contactForm" id="contactForm" method="post">
 
                 <div class="form-field">
-                    <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2"
-                           required="">
+                    <input name="contactName" type="text" id="contactName"
+                           placeholder="{% trans 'Send Us A Message' %}" value="" minlength="2" required="">
                 </div>
 
                 <div class="row">
                     <div class="col-six tab-full">
                         <div class="form-field">
-                            <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value=""
+                            <input name="contactEmail" type="email" id="contactEmail"
+                                   placeholder="{% trans 'Email' %}" value=""
                                    required="">
                         </div>
                     </div>
                     <div class="col-six tab-full">
                         <div class="form-field">
-                            <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+                            <input name="contactSubject" type="text" id="contactSubject"
+                                   placeholder="{% trans 'Subject' %}" value="">
                         </div>
                     </div>
                 </div>
 
                 <div class="form-field">
-                    <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50"
-                              required=""></textarea>
+                    <textarea name="contactMessage" id="contactMessage"
+                              placeholder="{% trans 'Send Us A Message' %}" rows="10" cols="50" required=""></textarea>
                 </div>
 
                 <div class="form-field">
-                    <button class="submitform">Submit</button>
+                    <button class="submitform">{% trans 'Submit' %}</button>
 
                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>
+                        <div class="text-loader">{% trans 'Sending...' %}</div>
                         <div class="s-loader">
                             <div class="bounce1"></div>
                             <div class="bounce2"></div>
@@ -592,17 +544,17 @@
             <div id="message-warning"></div>
 
             <div id="message-success">
-                <i class="fa fa-check"></i>Your message was sent, thank you!<br>
+                <i class="fa fa-check"></i>{% trans 'Your message was sent, thank you!' %}<br>
             </div>
 
         </div>
 
         <div class="col-four tab-full contact-info end animate-this">
 
-            <h5>Contact Information</h5>
+            <h5>{% trans 'Contact Information' %}</h5>
 
             <div class="cinfo">
-                <h6>Email Us At</h6>
+                <h6>{% trans 'Email Us At' %}</h6>
                 <p>
                     office@hort.parts<br>
                     office@hort.ua<br>
