--- a/hort_parts/templates/hort_parts/include/footer.html
+++ b/hort_parts/templates/hort_parts/include/footer.html
@@ -52,13 +52,13 @@
 
         </div>
     </div>
-
+    <hr/>
     <div class="footer-bottom">
         <div class="row">
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© {% trans 'Copyright' %} Hort.Parts 2009.</span>
+                    <span>© {% trans 'Copyright' %} | Hort Parts 2009.</span>
                 </div>
             </div>
 
