--- a/hort_parts/templates/hort_parts/product/download.html
+++ b/hort_parts/templates/hort_parts/product/download.html
@@ -10,7 +10,9 @@
     <!--Page Title-->
     <div class="page section-header text-center">
         <div class="page-title">
-            <div class="wrapper"><h1 class="page-width">{% trans 'Download Materials' %}</h1></div>
+            <div class="wrapper">
+                <h1 class="page-width">{% trans 'Download Materials' %}</h1>
+            </div>
         </div>
     </div>
     <!--End Page Title-->
