--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -62,9 +62,12 @@
                                 <div class="list-view-item__image-wrapper">
                                     <!-- Image -->
                                     <a href="{{ p.get_absolute_url }}">
+<!--                                        <img class="list-view-item__image blur-up lazyload"-->
+<!--                                             data-src="{% static 'img/image_not_found.jpg' %}"-->
+<!--                                             src="{% static 'img/image_not_found.jpg' %}"></a>-->
                                         <img class="list-view-item__image blur-up lazyload"
-                                             data-src="{% static 'img/image_not_found.jpg' %}"
-                                             src="{% static 'img/image_not_found.jpg' %}"></a>
+                                             data-src="{{ images.image_url|safe }}"
+                                             src="{{ images.image_url|safe }}"></a>
                                     <!-- End Image -->
                                 </div>
                             </div>
