--- a/hort_parts/templates/hort_parts/product/product_detail.html
+++ b/hort_parts/templates/hort_parts/product/product_detail.html
@@ -27,7 +27,7 @@
             <div class="product-single product-single-1">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12">
-
+                        {% for image in images %}
                         <div class="product-details-img product-single__photos bottom">
 
                             <div class="zoompro-wrap product-zoom-right pl-20">
@@ -56,14 +56,14 @@
                                        class="slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="{% static 'img/image_not_found.jpg' %}" />
+                                             src="{% static 'img/image_not_found.jpg' %}"/>
                                     </a>
                                     <a data-image="{% static 'img/image_not_found.jpg' %}"
                                        data-zoom-image="{% static 'img/image_not_found.jpg' %}"
                                        class="slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="{% static 'img/image_not_found.jpg' %}" />
+                                             src="{% static 'img/image_not_found.jpg' %}"/>
                                     </a>
                                 </div>
                             </div>
@@ -78,7 +78,7 @@
                             </div>
 
                         </div>
-
+                        {% endfor %}
                     </div>
 
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12">
