--- a/hort_parts/templates/hort_parts/product/product_detail.html
+++ b/hort_parts/templates/hort_parts/product/product_detail.html
@@ -33,8 +33,8 @@
                             <div class="zoompro-wrap product-zoom-right pl-20">
                                 <div class="zoompro-span">
                                     <img class="blur-up lazyload zoompro"
-                                         data-zoom-image="{% static 'photos/' %}{{ p.article.lower }}/1.jpg"
-                                         alt="" src="{% static 'photos/' %}{{ p.article.lower }}/1.jpg"/>
+                                         data-zoom-image="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
+                                         alt="" src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"/>
                                 </div>
                                 <div class="product-buttons">
                                     <a href="#" class="btn prlightbox" title="Zoom">
