--- a/hort_parts/templates/hort_parts/product/product_detail.html
+++ b/hort_parts/templates/hort_parts/product/product_detail.html
@@ -69,7 +69,7 @@
                             </div>
 
                             <div class="lightboximages">
-                                <a href="{% static 'photos/' %}{{ p.article.lower }}/1.jpg"
+                                <a href="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                    data-size="1024x1024"></a>
                                 <a href="{% static 'img/image_not_found.jpg' %}"
                                    data-size="1024x1024"></a>
