--- a/hort_parts/templates/hort_parts/product/product_detail.html
+++ b/hort_parts/templates/hort_parts/product/product_detail.html
@@ -68,6 +68,143 @@
                     </div>
 
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                        <div class="product-details-img">
+                            <div class="product-thumb">
+                                <div id="gallery" class="product-dec-slider-2 product-tab-left">
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible0.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big2.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big2.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible.jpg" alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big3.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big3.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible6.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible7-big.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible7-big.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible7.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big4.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big4.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="0" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible8.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big5.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big5.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="1" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible9.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big6.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big6.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="2" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible1.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big7.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big7.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="3" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible2.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big8.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big8.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="4" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible3.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big9.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big9.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="5" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible4.jpg"
+                                             alt=""/>
+                                    </a>
+                                    <a data-image="assets/images/product-detail-page/camelia-reversible-big10.jpg"
+                                       data-zoom-image="assets/images/product-detail-page/camelia-reversible-big10.jpg"
+                                       class="slick-slide slick-cloned" data-slick-index="6" aria-hidden="true"
+                                       tabindex="-1">
+                                        <img class="blur-up lazyload"
+                                             src="assets/images/product-detail-page/camelia-reversible5.jpg"
+                                             alt=""/>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="zoompro-wrap product-zoom-right pl-20">
+                                <div class="zoompro-span">
+                                    <img class="blur-up lazyload zoompro"
+                                         data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                         alt=""
+                                         src="assets/images/product-detail-page/camelia-reversible-big1.jpg"/>
+                                </div>
+                                <div class="product-labels"><span class="lbl on-sale">Sale</span><span
+                                        class="lbl pr-label1">new</span></div>
+                                <div class="product-buttons">
+                                    <a href="https://www.youtube.com/watch?v=93A2jOW5Mog" class="btn popup-video"
+                                       title="View Video"><i class="icon anm anm-play-r" aria-hidden="true"></i></a>
+                                    <a href="#" class="btn prlightbox" title="Zoom"><i
+                                            class="icon anm anm-expand-l-arrows" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                            <div class="lightboximages">
+                                <a href="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                   data-size="1462x2048"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big2.jpg"
+                                   data-size="1462x2048"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big3.jpg"
+                                   data-size="1462x2048"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible7-big.jpg"
+                                   data-size="1462x2048"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big4.jpg"
+                                   data-size="1462x2048"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big5.jpg"
+                                   data-size="1462x2048"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big6.jpg"
+                                   data-size="731x1024"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big7.jpg"
+                                   data-size="731x1024"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big8.jpg"
+                                   data-size="731x1024"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big9.jpg"
+                                   data-size="731x1024"></a>
+                                <a href="assets/images/product-detail-page/camelia-reversible-big10.jpg"
+                                   data-size="731x1024"></a>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                         <div class="product-single__meta">
                             <h1 class="product-single__title">{{ product.name }}</h1>
                         </div>
