--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -34,7 +34,7 @@
                                 {% for c in categories %}
                                 <li class="lvl-1">
                                     <a href="{{ c.get_absolute_url }}" class="site-nav">
-                                        {{ c.name }}</a>
+                                        <h3>{{ c.name }}</h3></a>
                                 </li>
                                 {% endfor %}
                             </ul>
