--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -467,14 +467,26 @@
 <section id="download">
 
     <div class="intro-wrap">
-
         <div class="row narrow section-intro with-bottom-sep animate-this">
             <div class="col-twelve">
                 <h3>{% trans 'Download Materials' %}</h3>
 
+                <div class="client-lists">
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
+                </div>
+
             </div>
         </div>
-
     </div>
 
 </section>
